Fix Panel/ menu/frame titles, Palette spelling, remove unused keys Add Dutch Palette, Catalog, CPE translations

--- a/java/src/jmri/jmrit/catalog/CatalogBundle_ca.properties
+++ b/java/src/jmri/jmrit/catalog/CatalogBundle_ca.properties
@@ -60,7 +60,7 @@ waitMsg         = Cercant {0}...
 prevMsg         = Sisuplau espera mentre es contrrueix la finestra
 
 # ImageIndex menus and labels
-editIndexFrame  = Edita/Crea \u00cdndex d'Imatge
+editIndexFrame=Crea/Edita \u00cdndex d'Imatge
 ImageIndexRoot  = \u00cdndex d'Imatge
 addNode         = Afegeix Node
 deleteNode      = Elimina Node
