--- a/java/src/jmri/jmrit/catalog/CatalogBundle_da.properties
+++ b/java/src/jmri/jmrit/catalog/CatalogBundle_da.properties
@@ -59,7 +59,7 @@ waitMsg         = Searching {0}...
 prevMsg         = Please wait while the window is being constructed
 
 # ImageIndex menus and labels
-editIndexFrame  = Edit/Create Image Index
+editIndexFrame=Create/Edit Image Index
 ImageIndexRoot  = Image Index
 addNode         = Add Node
 deleteNode      = Delete Node
