--- a/java/src/jmri/jmrit/catalog/CatalogBundle_fr.properties
+++ b/java/src/jmri/jmrit/catalog/CatalogBundle_fr.properties
@@ -59,7 +59,7 @@ waitMsg         = Recherche "{0}" ...
 prevMsg         = S'il vous pla\u00eet patienter pendant que la fen\u00eatre est en cours de construction
 
 # ImageIndex menus et les \u00e9tiquettes
-editIndexFrame  = \u00c9diter/Cr\u00e9er un index image
+editIndexFrame=Cr\u00e9er/\u00c9diter un index image
 ImageIndexRoot  = Index image
 addNode         = Ajout de N\u0153ud
 DeleteNode      = Supprimer N\u0153ud
