--- a/java/src/jmri/jmrit/catalog/CatalogBundle_it.properties
+++ b/java/src/jmri/jmrit/catalog/CatalogBundle_it.properties
@@ -58,7 +58,7 @@ waitMsg = Ricerca di {0}...
 prevMsg = Si prega di attendere mentre la finestra \u00e8 in costruzione
 
 # ImageIndex menus and labels
-editIndexFrame = Modifica/Crea Indice immagini
+editIndexFrame=Crea/Modifica Indice immagini
 ImageIndexRoot = Indice immagini
 addNode = Aggiungi Nodo
 deleteNode = Cancella Nodo
