--- a/java/src/jmri/jmrit/display/palette/PaletteBundle_nl.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle_nl.properties
@@ -13,7 +13,7 @@ OccupiedTrack       = Spoor Bezet
 PositionTrack       = Treinpositie
 AllocatedTrack      = Toegewezen
 DontUseTrack        = Buiten Gebruik
-ErrorTrack          = Spoor fout
+ErrorTrack          = Spoor Fout
 
 BlockSegment        = Blokdeel
 #LeftEndSegment      = Left End Segment
@@ -25,7 +25,7 @@ hidden              = Verborgen
 toArrow             = Uitrijpijl
 fromArrow           = Inrijpijl
 
-OccupancySensor     = Bezetmeldingscircuit
+OccupancySensor     = Spoorstroomloop
 ErrorSensor         = Foutterugmelder   
 
 IconSetName         = Naam Symbolenset:
@@ -54,11 +54,11 @@ LeftRight           = Klik Links/Rechts
 UpDown              = Klik Ophoog/Omlaag
 ReadMemory          = Toon Geheugenwaarde
 ReadWriteMemory     = Geheugen-invoerveld
-SpinnerMemory       = Geheugen-pinner
-ComboMemory         = Geheugen-keuzelijst
-OpenPicklist        = Open Terugmelder-keuzelijst
-addMissingStatus    = Voeg ontbrekende Status toe
-deleteStatus        = Verwijder Status
+SpinnerMemory       = Geheugen-spinner
+ComboMemory         = Geheugen-keuzevenster
+OpenPicklist        = Open Terugmelder-keuzevenster
+addMissingStatus    = Voeg ontbrekende Meldstatus toe
+deleteStatus        = Verwijder Meldstatus
 setDefaultIcons     = Stel Standaardsymbolen in
 
 #title
@@ -69,7 +69,7 @@ AddToTableTitle     = Voeg nieuw element toe aan tabel
 ShowIconsTitle      = Bewerk {0}-symbolen
 IconFamiliesLabel   = Symbolensets voor {0}:
 invisibleIcon       = Verborgen symbool
-circuitPaths        = Circuit-paden
+circuitPaths        = Spoorstroomlopen
 
 ColorChooser        = Achtergrondkleur-kiezer
 PanelColor          = Kleur Bedieningspaneel
@@ -87,11 +87,11 @@ tenth               = 10e
 
 FamilyName          = Symbolenset "{0}".
 EnterFamilyName     = Vul een naam in voor deze set.
-NoFamilyName        = Symbolenset heeft geen naam. Vul een naam in indien gewenst.
+NoFamilyName        = Symbolenset heeft geen naam. Vul indien gewenst een naam in.
 DuplicateFamilyName = De naam "{0}" is al in gebruik voor een andere Symbolenset met {1}s. Vul een andere naam in.
 DuplicatePosition   = Terugmelder {0} is al in gebruik voor de {1} positie.
-NeedPosition        = Deze Multisensor vraagt {0} posities. Selecteer meer rijen in de tabel.
-NeedIcon            = Deze Multisensor heeft max. {0} posities. Wis selecties om de volgorde an te passen./nVoor meer posities, voeg nog een symbool toe.
+NeedPosition        = Deze MultiSensor vraagt {0} posities. Selecteer meer rijen in de tabel.
+NeedIcon            = Deze MultiSensor heeft max. {0} posities. Wis selecties om de volgorde aan te passen./nVoor meer posities, voeg nog een symbool toe.
 AllFamiliesDeleted  = Alle Symbolenset van type {0} zijn verwijderd.\nWil je de standaardset herstellen?
 FamilyNotFound      = Symbolenset "{1}" voor type "{0}" niet gevonden.
 #RedX                = Red X
@@ -99,10 +99,10 @@ NoIconName          = Vul een naam in voor dit Symbool:
 UnkownFamilyName    = Symbolenset "{0}" is niet bekend op het Palet. Toevoegen aan Symbolensets?\nDit soort meldingen wordt niet meer getoond als je "Nee" kiest.
 DuplicateIconName   = Er bestaat al een symbool genaamd "{0}".
 InvalidOccDetector  = {0} is geen geldige Terugmelder of Bezetmelder voor een Indicatiespoor 
-InvalidErrSensor    = {0} is geen geldige Foutterugmeldernaam
+InvalidErrSensor    = {0} is geen geldige naam voor Foutterugmelder
 ShowTrainName       = Toon Treinnaam indien bezet
 AllStatus           = De Symbolenset bevat alle mogelijke Meldstatussen
-PickStatus          = De volgende Stutussymbolen ontbreken. Kies wat je wilt toevoegen.
+PickStatus          = De volgende symbolen ontbreken bij een Meldstatus. Kies wat je wilt toevoegen.
 SelectPathIcons     = Selecteer de paden die dit Symbool bevat(ten)
 
 # Instructions
@@ -112,51 +112,51 @@ PickRowMast         = Om een Seinmast toe te voegen, selecteer de rij in de tabe
 DragReporter        = en sleep de voorvertoning hieronder naar je Paneel.
 DragIconPanel       = -- sleep de voorvertoning hieronder naar je Paneel
 DragIconCatalog     = -- of klik op [{0}] en sleep een Symbool uit de catalogus naar je Paneel.
-ToAddDeleteModify   = To change an icon in the display panel below, drag an icon from the catalog to the icon.
-ToChangeName        = To change the name of an icon below, Double Click on the name.
-ToDeleteIcon        = To delete an icon, click on its name and then press the activated [{0}] button.
-ToLinkToURL         = To make clicking on this {0} link to another JMRI panel or URL, 
-enterPanel          = -- for a JMRI panel, type "frame:<panel name>" into the field at bottom.
-enterURL            = -- for an URL, type the link (i.e. "http://etc") into the field at bottom.
-ToColorBackground   = Om de achtergrondkleur in te stellen: Klik op [{0}]
-AddClockToPanel     = Drag the icon below to add a {0} to your control panel.
-nullMemoryIcon      = is displayed for the Display Memory Icon when Memory is null .
-emptyMemoryIcon     = When Memory is an empty string i.e. "" , the Display Memory Icon is blank.
-emptyMemoryFix      = When blank, enter a value in the other memory icons to view and drag it.
-comboMemory2        = Gebruik de [{0}] keuzelijst om elemente toe te voegen of te verwijderen.
-comboMemory1        = The ComboBox Memory Icon sets a memory by selecting an item from the ComboBox.
-addTextAndAttrs     = Enter text and choose attributes for the label in the Preview panel.  Then
+ToAddDeleteModify   = Om een symbool in onderstaande voorvertoning aan te passen, sleep je er een nieuwe naar toe uit de catalogus.
+ToChangeName        = Om de naam van een symbool hieronder aan te passen, dubbelklik je op de naam.
+ToDeleteIcon        = Om een symbool te verwijderen, klik je op zijn naam en dan op de geactiveerde [{0}]-knop.
+ToLinkToURL         = Om bij een klik op dit {0} naar een ander JMRI paneel of URL te springen:
+enterPanel          = -- voor een JMRI paneel, vul "frame:<panel name>" in het onderste tekstveld in.
+enterURL            = -- voor een URL, vul de link (bijv. "http://etc") in het onderste tekstveld in.
+ToColorBackground   = Klik je op [{0}] om de achtergrondkleur in te stellen
+AddClockToPanel     = Sleep onderstaand symboolom een {0} aan je paneel toe te voegen.
+nullMemoryIcon      = als het Geheugen geen waarde heeft wordt dit getoond als Geheugen-symbool.
+emptyMemoryIcon     = als het Geheugen een lege tekenreeks bevat (bijv. "") is het Geheugen-symbool blanco.
+emptyMemoryFix      = Indien het blanco is, vul dan een waarde in op de andere Geheugen-symbolen om het zichtbaar te maken en te slepen.
+comboMemory2        = Gebruik de [{0}] keuzelijst om elementen toe te voegen of te verwijderen.
+comboMemory1        = De Geheugen-keuzelijst stelt een waarde in het geheugen door een item in de lijst te kiezen.
+addTextAndAttrs     = Vul de tekst en de kenmerken van het label in op de voorvertoning. Daarna
  
 # tooltips
-ToolTipAddToTable   = Press to add a new item to the above table
-ToolTipShowIcons    = Press to display the icons for the current icon set
-ToolTipEditIcons    = Press to change the icons of the current icon set or to add and delete icon sets
-ToolTipDragTableRow = Drag a row from the table to add a label of the item to the panel
-ToolTipDragSelection = Drag the sensor selections from the table to add the multisensor to the panel
-ToolTipDragIcon     = Drag an icon from this panel to add it to the control panel
-ToolTipDragCatalog  = Drag an icon directly from the Catalog Panel to add it to the control panel  
-ToolTipEnterText    = Enter the text for the label and press the Enter key
-ToolTipDragText     = Drag the label from the Preview panel to add it to the control panel
-ToolTipSetIconSensor = Select sensor rows in the table in the order the Sensors should activate in the multiSensor.
-ToolTipAddFamily    = Create an additonal set of icons for this device
-ToolTipDeleteFamily = Delete this set of icons
-ToolTipClearSelection = Clear selected table rows
-ToolTipAddIcon      = Add another icon to your icon panel. Enter a name for it.  
-ToolTipDeleteIcon   = Delete an icon from your icon panel. Select the icon to be deleted. 
-ToolTipAddPosition  = Add an additional Sensor position to this icon set 
-ToolTipDeletePosition = Delete the last Sensor position from this icon set
-ToolTipEditColor    = Choose a color for the background panel
-ToolTipCatalog      = Open the Icon Catalog and drag icons from it to the panel
-ToolTipOccupancySensor = Enter the name of a Sensor or OBlock that detects occupancy for this track item 
-ToolTipErrorSensor  = Enter the name of the Sensor that detects error conditions for this track item
-ToolTipPickLists    = The pick list table displays a choice of sensors or OBlocks to do the detection
-ToolTipPickFromTable = Select an item from the table and an icon set to update the panel
-ToolTipPickRowToShowIcon = Select a row from the table to show the icons for the item
-ToolTipShowTrainName = Track section should display the name of the warranted Train when it occupies the section
-ToolTipMissingStatus = Add back a previously deleted Track Status
-ToolTipDeleteStatus = Delete a Track Status you are not going to use
-ToolTipSelectPathIcons = Check the paths this icon is needed to display the path.
-ToolTipSetDefaultIcons = Change the Default Portal Icons to the selected icon family.
+ToolTipAddToTable   = Klik om een nieuw element aan bovenstaande tabel toe te voegen
+ToolTipShowIcons    = Klik om de symbolen in de huidige Symbolenset te tonen
+ToolTipEditIcons    = Klik om symbolen in de huidige Symbolenset te bewerken, wissen of toe te voegen
+ToolTipDragTableRow = Sleep een rij uit de tabel om een Etiket of Element aan het Paneel toe te voegen
+ToolTipDragSelection = Sleep de geselecteerde Terugmelders van de tabel naar het Paneel om de MultiSensor toe te voegen
+ToolTipDragIcon     = Sleep een symbool uit de Voorvertoning naar het Bedieningspaneel om het toe te voegen
+ToolTipDragCatalog  = Sleep een symbool direct uit de Catalogus naar het Bedieningspaneel om het toe te voegen
+ToolTipEnterText    = Vul de tekst op het Etiket in en druk op de Enter-toets
+ToolTipDragText     = Sleep het Etiket uit de Voorvertoning naar het Bedieningspaneel om het toe te voegen
+ToolTipSetIconSensor = Selecteer de Terugmelders in de tabel in de volgorde dat ze de MultiSensor moeten activeren.
+ToolTipAddFamily    = Maak een extra Symbolenset aan voor dit element
+ToolTipDeleteFamily = Wis deze Symbolenset
+ToolTipClearSelection = Deselecteer alle rijen
+ToolTipAddIcon      = Voeg een symbool toe aan deze set. Vul een naam in.
+ToolTipDeleteIcon   = Wis een symbool uit deze set. Selecteer eerst het te verwijderen symbool.
+ToolTipAddPosition  = Voeg een extra Terugmelderstaus toe aan deze set
+ToolTipDeletePosition = Wis de laatste Terugmelderstaus uit deze set
+ToolTipEditColor    = Kies een achtergrondkleur voor het Paneel
+ToolTipCatalog      = Open de Symbolencatalogus en sleep symbolen naar een Paneel
+ToolTipOccupancySensor = Vul de naam van een Terugmelder of Bezetmelder in die de bezetstatus van dit Spoor aangeeft
+ToolTipErrorSensor  = Vul de naam van een Terugmelder in die de foutstatus van dit Spoor aangeeft
+ToolTipPickLists    = Het Keuzevenster toont Terugmelders en OBlocks voor statusmelding
+ToolTipPickFromTable = Selecteer een item in de tabel en een Symbolenset om het Paneel bij te werken
+ToolTipPickRowToShowIcon = Selecteer een item in de tabel om de bijbehorende symbolen te tonen
+ToolTipShowTrainName = Spoordeel toont naam van de toegewezen Trein als die de Sectie inrijdt
+ToolTipMissingStatus = Herstel een eerder gewist Terugmelderstatus
+ToolTipDeleteStatus = Verwijder een Terugmelderstatus die niet wordt gebruikt
+ToolTipSelectPathIcons = Controleer welke Paden dit symbool gebruiken op het Paneel.
+ToolTipSetDefaultIcons = Pas de geselecteerde Symbolenset toe als standaard Portaal-symbolen.
 
 # Decorator strings
 PreviewBorderTitle  = Voorvertoning
