--- a/java/src/jmri/jmrit/display/DisplayBundle_ca.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle_ca.properties
@@ -52,9 +52,6 @@ MenuItemScriptInput = Script d'Entrada
 
 MenuItemNoPanels = (Cap Panell Disponible)
 
-LabelSelectDirectory = Selecciona el diretocri per mostrar les icones que cont\u00e9
-CatalogMessage = Selcciona una ruta per cercar icones.
-
 # editor choice items
 ChooseEditor = Escull l'editor
 ChoiceText1 = Escull l'editor per al nou panell.
@@ -125,8 +122,8 @@ Italic          = Cursiva
 Bold            = Negreta
 FontColor       = Color de la Lletra
 FontBackgroundColor = Color del fons
-SetBackgroundColor = Set Background Color
-DefaultTextColor = Set Default Text Color
+SetBackgroundColor=Set Background Color{0}
+DefaultTextColor=Set Default Text Color{0}
 LocoColor       = Color de marcat de la Locomotora
 Level           = Nivell
 
@@ -207,9 +204,9 @@ TitleChangeIcon     = Canvia la Icona
 LabelEditor         = Editor
 
 findIconMenu    = Troba Icones
-editIndexMenu   = Crea/Edita \u00edndex d'Imatges
-openDirMenu     = Obre un directori de Sistema
-searchFSMenu    = Busca arxius de Sistema en cerca d'Icones
+editIndexMenu=Crea/Edita \u00edndex d'Imatges...
+openDirMenu=Obre un directori de Sistema...
+searchFSMenu=Busca arxius de Sistema en cerca d'Icones...
 
 selectTypeIcon  = Seleciona el tipus d'icona per Afegir al Panell
 invisibleIcon   = Icona invisible 
