--- a/java/src/jmri/jmrit/display/DisplayBundle_it.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle_it.properties
@@ -49,9 +49,6 @@ MenuItemScriptInput = Ingresso Script
 
 MenuItemNoPanels = (Nessun Pannello disponibile)
 
-LabelSelectDirectory = Seleziona la cartella per visualizzare le icone contenute
-CatalogMessage = Scegli un disco in cui cercare le icone.
-
 # editor choice items
 ChooseEditor = Scegli un Editor
 ChoiceText1 = Si prega di scegliere un editor per il tuo nuovo pannello.
@@ -126,8 +123,8 @@ Bold = Grassetto
 Bold/italic = Grassetto/Corsivo
 FontColor = Colore caratteri
 FontBackgroundColor = Colore sfondo
-SetBackgroundColor = Imposta Colore Sfondo
-DefaultTextColor = Imposta Colore Testo Default
+SetBackgroundColor=Imposta Colore Sfondo{0}
+DefaultTextColor=Imposta Colore Testo Default{0}
 LocoColor = Colore Segnaposto Loco
 Level       = Livello
 
@@ -203,11 +200,10 @@ ScrollVertical = Solo Verticale
 TitleChangeIcon = Cambia Icona
 
 LabelEditor = Editor Etichette
-
-findIconMenu = Cerca Icone
-editIndexMenu = Crea/Modifica indice Immagini
-openDirMenu  = Apri una Directory
-searchFSMenu = Cerca Icone sul disco
+findIconMenu=Cerca Icone
+editIndexMenu=Crea/Modifica indice Immagini...
+openDirMenu=Apri una Directory...
+searchFSMenu=Cerca Icone sul disco...
 
 selectTypeIcon = Seleziona il tipo di icona da aggiungere al Pannello:
 invisibleIcon = Icona invisibile
