Add sensor dropdown to CPE shape edit pane, add Logging Dutch spelling fixes

--- a/java/src/jmri/jmrit/display/controlPanelEditor/ControlPanelBundle_nl.properties
+++ b/java/src/jmri/jmrit/display/controlPanelEditor/ControlPanelBundle_nl.properties
@@ -66,8 +66,8 @@ drawInstructions2 = Sleep een "selectierechthoek" rond de vorm.
 drawInstructions2a = Klik de hoekpunten met de muis om een veelhoek te maken.
 drawInstructions2b = Dubbelklik om de veelhoek te voltooien.
 drawInstructions2c = Gebruik de Plus en Delete toetsen om een hoekpunt toe te voegen.
-drawInstructions3a = (Optie) Om de zichtbaarhed van de vorm te beheren
-drawInstructions3b = Vul je een naam van een Terugmelder in in het tekstvak [{0}].
+drawInstructions3a = (Optie) Om de zichtbaarheid van de vorm te beheren kies je
+drawInstructions3b = een Terugmelder uit de lijst bij [{0}].
 VisibleSensor   = Zichtbaarheids-/Niveaubeheer
 SensorMsg       = Als de Terugmelder Actief wordt wordt de vorm verborgen of wijzigt het tekenniveau.
 HideOnSensor    = Verberg Vorm
