use configures jmribeancomboboxes to configure SSL update tooltips for combos spelling, Javadoc

--- a/java/src/jmri/jmrit/blockboss/BlockBossBundle_ca.properties
+++ b/java/src/jmri/jmrit/blockboss/BlockBossBundle_ca.properties
@@ -11,7 +11,7 @@ _BlockBossLogic = L\u00f2gica BlockBoss
 SignalLogicForX = L\u00f2gica de Senyal per a {0}
 HeadXNotDefined = Cap {0} encara no est\u00e0 definit
 And_Protect_Signal = i Protegeix el Senyal:
-WhenTurnoutIsX = Quan l'estat de l''Agulla \u00e9s: {0}
+WhenTurnoutIsX = Quan l''estat de l''Agulla \u00e9s: {0}
 And_Sensors = i Sensor/s:
 To_Protect_Signal=Per protegir el Senyal:
 WatchesTurnout = Controla Agulles:
@@ -41,8 +41,8 @@ One_aspect_faster_than_yellow_displays = Un aspecte m\u00e9s r\u00e0pid que el G
 Enter_protected_turnout_number_here. = Entra l'Agulla protegida aqu\u00ed.
 Sensor_active_sets_this_signal_to_Red. = El Sensor Actiu estableix aquest Senyal a Vermell.
 Enter_sensor_that_lights_this_signal_or = Entra el Sensor que il\u00b7lumina aquest Senyal<br>o Deixa en blanc per sempre
-then_hit_return_to_load_its_information. = despr\u00e9s prem Return per llegir la informaci\u00f3.
-Enter_a_new_signal_head_number_or = Entra un nou n\u00famero de Senyal o entra un n\u00famero de Senyal existent, 
+then_hit_return_to_load_its_information. = per llegir la informaci\u00f3.
+Enter_a_new_signal_head_number_or = Entra un Senyal existent,
 Single_signal_head_on_single = Senyal Simple en simple via travessant una doble via.
 Signal_head_for_branching_track = Senyal per a via de bifurcaci\u00f3
 through_turnout_in_either_direction = a trav\u00e9s d'agulla en qualsevol sentit
