--- a/java/src/jmri/jmrit/blockboss/BlockBossBundle_de.properties
+++ b/java/src/jmri/jmrit/blockboss/BlockBossBundle_de.properties
@@ -40,11 +40,11 @@ Limits_the_fastest_aspect_displayed = Begrenzt den schnellsten Signalbegriff
 flashing_yellow_rather_than_green = Gelb blinkend, statt Gr\u00fcn.
 to_flashingred_rather_than_green = Rot blinkend, statt Gr\u00fcn.
 One_aspect_faster_than_yellow_displays = Zeigt einen Begriff schneller als Gelb
-Enter_protected_turnout_number_here. = Namen des gesch\u00fctzten Weiches hier eingeben.
+Enter_protected_turnout_number_here. = Den gesch\u00fctzten Weichen hier ausw\u00e4hlen.
 Sensor_active_sets_this_signal_to_Red. = Detektor Aktiv stellt Schirm auf Rot.
-Enter_sensor_that_lights_this_signal_or = Namen der Detektor eingeben welche dieses Schirm einblendet,<br>oder leer lassen f\u00fcr Immer An.
-then_hit_return_to_load_its_information. = und Return-Taste dr\u00fccken um heutige Konfiguration ein zu lesen.
-Enter_a_new_signal_head_number_or = Neuen oder bestehenden Signalschirmnamen eingeben,
+Enter_sensor_that_lights_this_signal_or = Eine Detektor ausw\u00e4hlen welche dieses Schirm einblendet,<br>oder leer lassen f\u00fcr Immer An.
+then_hit_return_to_load_its_information. = heutige Konfiguration wird eingelesen.
+Enter_a_new_signal_head_number_or = Bestehenden Signalschirm ausw\u00e4hlen. Eventuelle
 Single_signal_head_on_single = Einziges Signalschirm auf Enkelgleis in Richtung Doppelgleis.
 Signal_head_for_branching_track = Signalschirm auf Abzweig
 through_turnout_in_either_direction = durch Weiche in jede Richtung.
@@ -62,7 +62,8 @@ Restricting_Speed = Niedrige Geschwindigkeit
 ApplyToolTip = Dr\u00fccke um Logik fur dieses Signalschirm zu erstellen/aktualisieren.
 ApplyErrorDialog = Fehler beim Erstellen vom SSL.\nBitte Konsole ansehen f\u00fcr Einzelheiten.
 CommentToolTip = Notitz wird mit SSL gespeichert
-StatusSslStart = Zuerst obenan den Namen des Signalschirms eingeben
+StatusSslStart = Zuerst obenan einen Signalschirm ausw\u00e4hlen
 StatusSslCreated = SSL f\u00fcr Signalschirm {0} erstellt
 StatusSslUpdated = SSL f\u00fcr Signalschirm {0} aktualisiert
 StatusSslLoaded = \u00dcberpr\u00fcfe Einzelheiten der SSL Konfiguration in diesem Fenster und [{0}] dr\u00fccken
+InUseThisSslWillBeDeleted = Diesen Logik wird gel\u00f6scht
