--- a/java/src/jmri/jmrit/blockboss/BlockBossBundle_fr.properties
+++ b/java/src/jmri/jmrit/blockboss/BlockBossBundle_fr.properties
@@ -29,7 +29,7 @@ On_Single_Block = Sur le Canton unique
 Is_Distant_Signal = Est Signal Distant
 With_Flashing_Yellow = Avec Jaune clignotant
 Limited_Speed = Vitesse limit\u00e9e
-unless_over_ridden_by_an_intermediate_stop_sensor.=Plus ou moins pilot\u00e9 par un Capteur d'Arr\u00eat interm\u00e9diaire.
+unless_over_ridden_by_an_intermediate_stop_sensor. = Plus ou moins pilot\u00e9 par un Capteur d'Arr\u00eat interm\u00e9diaire.
 Mirrors_the_protected_(following)_signals_status = Renvoie l'\u00e9tat du Signal prot\u00e9g\u00e9 (suivant)
 Enter_the_high_speed_signal_head_for_this_track. = Entrer le Feu de Signalisation haute vitesse pour cette piste.
 For_dual_head_signals_the_fastest_aspect_is_protected. = Pour deux Feux de Signalisation, l'aspect le plus rapide est prot\u00e9g\u00e9.
@@ -39,11 +39,11 @@ to_flashingred_rather_than_green = a Rouge clignotant, au lieu du Vert.
 Limits_the_fastest_aspect_displayed = Les limites de l'aspect le plus rapide s'affiche 
 flashing_yellow_rather_than_green = Jaune clignotant, plut\u00f4t que Vert.
 One_aspect_faster_than_yellow_displays = Un aspect plus rapides que les \u00e9crans Jaunes 
-Enter_protected_turnout_number_here. = Entrer ici le num\u00e9ro de l'Aiguillage prot\u00e9g\u00e9.
+Enter_protected_turnout_number_here. = Choisi l'Aiguillage prot\u00e9g\u00e9.
 Sensor_active_sets_this_signal_to_Red. = Le Capteur actif met ce Signal au Rouge.
-Enter_sensor_that_lights_this_signal_or = Entrer capteur qui allume ce Signal ou laisser vide pour toujours.
-then_hit_return_to_load_its_information. = Puis appuyer sur Retour pour charger ses informations.
-Enter_a_new_signal_head_number_or = Entrer nouvelle adresse de Feu de Signalisation,<br>ou entrer une adresse existante .
+Enter_sensor_that_lights_this_signal_or = Choisi capteur qui allume ce Signal ou laisser vide pour toujours.
+then_hit_return_to_load_its_information. = pour charger ses \u00e9ventuelles informations.
+Enter_a_new_signal_head_number_or = Choisi une Feu de Signalisation existante
 Single_signal_head_on_single = Feu de Signalisation unique sur simple voie face \u00e0 double voie.
 Signal_head_for_branching_track = Feu de Signalisation pour branchement voie
 through_turnout_in_either_direction = par l'Aiguillage dans les deux directions.
