--- a/java/src/jmri/jmrit/blockboss/BlockBossBundle_it.properties
+++ b/java/src/jmri/jmrit/blockboss/BlockBossBundle_it.properties
@@ -42,8 +42,8 @@ One_aspect_faster_than_yellow_displays = Un aspetto pi\u00f9 veloce del Giallo
 Enter_protected_turnout_number_here. = Inserire qui il numero dello scambio protetto.
 Sensor_active_sets_this_signal_to_Red. = Sensore attivo imposta questo segnale a Rosso.
 Enter_sensor_that_lights_this_signal_or = Immettere sensore che illumina questo segnale<br>o lascia vuoto per sempre acceso.
-then_hit_return_to_load_its_information. = poi premere invio per caricare le informazioni.
-Enter_a_new_signal_head_number_or = Inserire un nuovo numero segnale, o inserire un numero di segnale esistente
+then_hit_return_to_load_its_information. = per caricare le informazioni.
+Enter_a_new_signal_head_number_or = Inserire un segnale esistente
 Single_signal_head_on_single = Segnale semplice su singolo binario attraversamento doppio binario
 Signal_head_for_branching_track = Segnale per il ramo deviato
 through_turnout_in_either_direction = attraversamento scambio in entrambe le direzioni
