--- a/java/src/jmri/jmrit/blockboss/BlockBossBundle_ja_JP.properties
+++ b/java/src/jmri/jmrit/blockboss/BlockBossBundle_ja_JP.properties
@@ -39,11 +39,11 @@ Limits_the_fastest_aspect_displayed = Limits the fastest aspect displayed
 flashing_yellow_rather_than_green = Flashing Yellow, rather than Green.
 to_flashingred_rather_than_green=to Flashing Red, rather than Green.
 One_aspect_faster_than_yellow_displays = One aspect faster than Yellow displays
-Enter_protected_turnout_number_here. = Enter protected turnout number here.
+Enter_protected_turnout_number_here. = Select the protected Turnout here.
 Sensor_active_sets_this_signal_to_Red. = Sensor active sets this signal head to Red.
-Enter_sensor_that_lights_this_signal_or = Enter Sensor that lights this Signal,<br>or leave blank for Always On.
-then_hit_return_to_load_its_information. = then hit return to load its information.
-Enter_a_new_signal_head_number_or = Enter a new Signal Head address, or enter an existing Signal Head address, 
+Enter_sensor_that_lights_this_signal_or = Select a Sensor that lights this Signal,<br>or leave blank for Always On.
+then_hit_return_to_load_its_information. = the existing information will be loaded for editing.
+Enter_a_new_signal_head_number_or = Select a Signal Head to attach SSL to. If present,
 Single_signal_head_on_single = Single signal head on single track facing double track.
 Signal_head_for_branching_track = Signal head for branching track
 through_turnout_in_either_direction = through turnout in either direction
