--- a/java/src/jmri/jmrit/blockboss/BlockBossBundle_nl.properties
+++ b/java/src/jmri/jmrit/blockboss/BlockBossBundle_nl.properties
@@ -40,11 +40,11 @@ Limits_the_fastest_aspect_displayed = Verlaagt het snelste Seinbeeld tot
 flashing_yellow_rather_than_green = Geel knipperend i.p.v. Groen.
 to_flashingred_rather_than_green = Rood knipperend i.p.v. Groen.
 One_aspect_faster_than_yellow_displays = Toont 1 Seinbeeld sneller dan Geel als
-Enter_protected_turnout_number_here. = Vul de naam van het te bewaken Wissel in.
+Enter_protected_turnout_number_here. = Kies hier het te bewaken Wissel.
 Sensor_active_sets_this_signal_to_Red. = Deze Terugmelder Actief zet het Seinscherm op Rood.
-Enter_sensor_that_lights_this_signal_or = Vul naam in van de Terugmelder die dit Scherm inschakelt,<br>of laat veld leeg voor Altijd Aan.
-then_hit_return_to_load_its_information. = en dan de Return-toets indrukken om de huidige configuratie in te lezen.
-Enter_a_new_signal_head_number_or = Naam van een nieuw of bestaand Seinschild invullen
+Enter_sensor_that_lights_this_signal_or = Kies hier de Terugmelder die dit Scherm inschakelt,<br>of laat veld leeg voor Altijd Aan.
+then_hit_return_to_load_its_information. = dan wordt de huidige configuratie ingelezen.
+Enter_a_new_signal_head_number_or = Kies allereerst een bestaand Seinschild
 Single_signal_head_on_single = Enkel Seinschild op enkelspoor naar dubbelspoor.
 Signal_head_for_branching_track = Seinschild op Aftakkend spoor
 through_turnout_in_either_direction = door Wissel in beide richtingen.
@@ -58,11 +58,11 @@ InUseWatchedSensor = Als Controleterugmelder
 InUseApproachSensor = Naderingsterugmelder
 InUseBlockBossFooter = Wordt verwijderd uit deze SSL
 Restricting_Speed = Langzame snelheid
-
-ApplyToolTip = Klik om de logica voor dit Seinscild aan te maken/bij te werken.
+ApplyToolTip = Klik om de logica voor dit Seinschild aan te maken/bij te werken.
 ApplyErrorDialog = Fout bij het aanmaken van SSL.\nBekijk details in de Systeemconsole.
 CommentToolTip = Notitie wordt opgeslagen met deze SSL
-StatusSslStart = Begin door bovenaan de naam van een Seinschild in te vullen
+StatusSslStart = Begin door bovenaan een Seinschild te kiezen uit de lijst
 StatusSslCreated = SSL voor Seinschild {0} aangemaakt
 StatusSslUpdated = SSL voor Seinschild {0} bijgewerkt
 StatusSslLoaded = Controleer de SSL kenmerken in dit venster en klik dan op [{0}]
+InUseThisSslWillBeDeleted = Deze SSL wordt gewist
