--- a/java/src/jmri/jmrit/blockboss/BlockBossBundle_da.properties
+++ b/java/src/jmri/jmrit/blockboss/BlockBossBundle_da.properties
@@ -36,15 +36,15 @@ Enter_the_high_speed_signal_head_for_this_track. = Enter the high speed Signal H
 For_dual_head_signals_the_fastest_aspect_is_protected. = For dual head Signals, the fastest Appearance is protected.
 Enter_the_low_speed_signal_head_for_this_track. = Enter the low speed Signal Head for this track.
 to_yellow_rather_than_green = to Yellow, rather than Green.
-to_flashingred_rather_than_green=to Flashing Red, rather than Green.
+to_flashingred_rather_than_green = to Flashing Red, rather than Green.
 Limits_the_fastest_aspect_displayed = Limits the fastest Appearance displayed 
 flashing_yellow_rather_than_green = Flashing Yellow, rather than Green.
 One_aspect_faster_than_yellow_displays = One Appearance faster than Yellow displays 
-Enter_protected_turnout_number_here. = Enter protected Turnout address here.
+Enter_protected_turnout_number_here. = Select the protected Turnout here.
 Sensor_active_sets_this_signal_to_Red. = This Sensor Active sets the Signal Head to Red.
-Enter_sensor_that_lights_this_signal_or = Enter Sensor that lights this Signal Head,<br>or leave blank for Always On.
-then_hit_return_to_load_its_information. = then hit Return to load its information.
-Enter_a_new_signal_head_number_or = Enter a new Signal Head address, or enter an existing Signal Head address, 
+Enter_sensor_that_lights_this_signal_or = Select a Sensor that lights this Signal Head,<br>or leave blank for Always On.
+then_hit_return_to_load_its_information. = the existing information will be loaded for editing.
+Enter_a_new_signal_head_number_or = Select a Signal Head to attach SSL to. If present,
 Single_signal_head_on_single = Single Signal Head on single track facing double track.
 Signal_head_for_branching_track = Signal Head for branching track
 through_turnout_in_either_direction = through Turnout in either direction.
@@ -62,7 +62,7 @@ InUseThisSslWillBeDeleted = This SSL will be deleted
 ApplyToolTip = Press to create/update logic for this Signal Head.
 ApplyErrorDialog = An error occurred creating the Simple Signal Logic.\nCheck the Console log for more information.
 CommentToolTip = Your notes will be stored with this SSL
-StatusSslStart = Start by filling in the name of a Signal Head at the top
+StatusSslStart=Start by selecting a Signal Head at the top
 StatusSslCreated = SSL created for Signal Head {0}
 StatusSslUpdated = SSL updated for Signal Head {0}
 StatusSslLoaded = Check or change the SSL configuration on this pane and click [{0}]
