add ellipsis to SSL menu item name

--- a/java/src/jmri/jmrit/Bundle_ca.properties
+++ b/java/src/jmri/jmrit/Bundle_ca.properties
@@ -20,7 +20,7 @@ MenuItemLightTable = Llums
 MenuItemSignalTable = Senyals
 MenuItemReporterTable = Retrosenyal
 MenuItemMemoryTable = Variables de mem\u00f2ria
-MenuItemSimpleSignal = L\u00f2gica de senyals simplificada
+MenuItemSimpleSignal=L\u00f2gica de senyals simplificada...
 MenuItemRouteTable = Itineraris
 MenuItemLRouteTable = L\u00f2gica d'itineraris
 MenuItemLogixTable = Logix
