--- a/java/src/jmri/jmrit/Bundle_da.properties
+++ b/java/src/jmri/jmrit/Bundle_da.properties
@@ -19,7 +19,7 @@ MenuItemLightTable = Lys
 MenuItemSignalTable = Signal Hoved
 MenuItemReporterTable = Reporters
 MenuItemMemoryTable = Hukommelses Variabler
-MenuItemSimpleSignal = Simpel Signal Logik
+MenuItemSimpleSignal=Simpel Signal Logik...
 MenuItemRouteTable = Ruter
 MenuItemLRouteTable = LRuter
 MenuItemLogixTable = Logix
