--- a/java/src/jmri/jmrit/Bundle_de.properties
+++ b/java/src/jmri/jmrit/Bundle_de.properties
@@ -20,7 +20,7 @@ MenuItemLightTable = Lichte
 MenuItemSignalTable = Signalschirme
 MenuItemReporterTable = Melder
 MenuItemMemoryTable = Speicher
-MenuItemSimpleSignal = Einfache Signallogik
+MenuItemSimpleSignal=Einfache Signallogik...
 MenuItemRouteTable = Weichenstra\u00dfen
 MenuItemLRouteTable = Logixweichenstra\u00dfen
 MenuItemLogixTable = Logix
