--- a/java/src/jmri/jmrit/Bundle_it.properties
+++ b/java/src/jmri/jmrit/Bundle_it.properties
@@ -20,7 +20,7 @@ MenuItemLightTable = Luci
 MenuItemSignalTable = Vela Segnale
 MenuItemReporterTable = Reporters
 MenuItemMemoryTable = Variabili in Memoria
-MenuItemSimpleSignal = Logica Segnali Semplificata
+MenuItemSimpleSignal=Logica Segnali Semplificata...
 MenuItemRouteTable = Itinerari
 MenuItemLRouteTable = Logica Itinerari
 MenuItemLogixTable = Logix
