--- a/java/src/jmri/jmrit/Bundle_nl.properties
+++ b/java/src/jmri/jmrit/Bundle_nl.properties
@@ -19,7 +19,7 @@ MenuItemLightTable = Lampen
 MenuItemSignalTable = Seinschilden
 MenuItemReporterTable = Reporters
 MenuItemMemoryTable = Geheugenvariabelen
-MenuItemSimpleSignal = Simpele Seinlogica
+MenuItemSimpleSignal=Simpele SeinLogica...
 MenuItemRouteTable = Wisselstraten
 MenuItemLRouteTable = LRoutes
 MenuItemLogixTable = Logix
