--- a/java/src/jmri/jmrit/blockboss/BlockBossBundle_de.properties
+++ b/java/src/jmri/jmrit/blockboss/BlockBossBundle_de.properties
@@ -40,9 +40,9 @@ Limits_the_fastest_aspect_displayed = Begrenzt den schnellsten Signalbegriff
 flashing_yellow_rather_than_green = Gelb blinkend, statt Gr\u00fcn.
 to_flashingred_rather_than_green = Rot blinkend, statt Gr\u00fcn.
 One_aspect_faster_than_yellow_displays = Zeigt einen Begriff schneller als Gelb
-Enter_protected_turnout_number_here. = Den gesch\u00fctzten Weichen hier ausw\u00e4hlen.
+Enter_protected_turnout_number_here. = Den gesch\u00fctzten Weichen hier ausw\u00e4hlen oder neuen Namen eingeben.
 Sensor_active_sets_this_signal_to_Red. = Detektor Aktiv stellt Schirm auf Rot.
-Enter_sensor_that_lights_this_signal_or = Eine Detektor ausw\u00e4hlen welche dieses Schirm einblendet,<br>oder leer lassen f\u00fcr Immer An.
+Enter_sensor_that_lights_this_signal_or = Eine Detektor ausw\u00e4hlen (oder neuen Namen eingeben) welche dieses Schirm einblendet,<br>oder leer lassen f\u00fcr Immer An.
 then_hit_return_to_load_its_information. = heutige Konfiguration wird eingelesen.
 Enter_a_new_signal_head_number_or = Bestehenden Signalschirm ausw\u00e4hlen. Eventuelle
 Single_signal_head_on_single = Einziges Signalschirm auf Enkelgleis in Richtung Doppelgleis.
