--- a/java/src/jmri/jmrit/blockboss/BlockBossBundle_nl.properties
+++ b/java/src/jmri/jmrit/blockboss/BlockBossBundle_nl.properties
@@ -40,9 +40,9 @@ Limits_the_fastest_aspect_displayed = Verlaagt het snelste Seinbeeld tot
 flashing_yellow_rather_than_green = Geel knipperend i.p.v. Groen.
 to_flashingred_rather_than_green = Rood knipperend i.p.v. Groen.
 One_aspect_faster_than_yellow_displays = Toont 1 Seinbeeld sneller dan Geel als
-Enter_protected_turnout_number_here. = Kies hier het te bewaken Wissel.
+Enter_protected_turnout_number_here. = Kies hier het te bewaken Wissel of vul naam voor een nieuwe Wissel in.
 Sensor_active_sets_this_signal_to_Red. = Deze Terugmelder Actief zet het Seinscherm op Rood.
-Enter_sensor_that_lights_this_signal_or = Kies hier de Terugmelder die dit Scherm inschakelt,<br>of laat veld leeg voor Altijd Aan.
+Enter_sensor_that_lights_this_signal_or = Kies (of of vul naam voor een nieuwe in voor) de Terugmelder die het Scherm inschakelt,<br>of laat veld leeg voor Altijd Aan.
 then_hit_return_to_load_its_information. = dan wordt de huidige configuratie ingelezen.
 Enter_a_new_signal_head_number_or = Kies allereerst een bestaand Seinschild
 Single_signal_head_on_single = Enkel Seinschild op enkelspoor naar dubbelspoor.
