--- a/java/src/jmri/jmrit/Bundle_cs.properties
+++ b/java/src/jmri/jmrit/Bundle_cs.properties
@@ -19,7 +19,7 @@ MenuItemLightTable = Osv\u011btlen\u00ed
 MenuItemSignalTable = N\u00e1v\u011bstn\u00ed \u0161t\u00edty
 MenuItemReporterTable = Reporter
 MenuItemMemoryTable = Pam\u011b\u0165 prom\u011bnn\u00fdch
-MenuItemSimpleSignal = Jednoduch\u00e1 n\u00e1v\u011bstn\u00ed logika
+MenuItemSimpleSignal=Jednoduch\u00e1 n\u00e1v\u011bstn\u00ed logika...
 MenuItemRouteTable = Cesty
 MenuItemLRouteTable = LRoutes
 MenuItemLogixTable = Logix
