update SSL help text, update SSL screen shot also for French help, fix sidebar chars fix _de and _nl SSL spelling

--- a/java/src/jmri/jmrit/blockboss/BlockBossBundle_nl.properties
+++ b/java/src/jmri/jmrit/blockboss/BlockBossBundle_nl.properties
@@ -42,7 +42,7 @@ to_flashingred_rather_than_green = Rood knipperend i.p.v. Groen.
 One_aspect_faster_than_yellow_displays = Toont 1 Seinbeeld sneller dan Geel als
 Enter_protected_turnout_number_here. = Kies hier het te bewaken Wissel of vul naam voor een nieuwe Wissel in.
 Sensor_active_sets_this_signal_to_Red. = Deze Terugmelder Actief zet het Seinscherm op Rood.
-Enter_sensor_that_lights_this_signal_or = Kies (of of vul naam voor een nieuwe in voor) de Terugmelder die het Scherm inschakelt,<br>of laat veld leeg voor Altijd Aan.
+Enter_sensor_that_lights_this_signal_or = Kies (of vul een nieuwe naam in voor) de Terugmelder die het Scherm inschakelt,<br>of laat veld leeg voor Altijd Aan.
 then_hit_return_to_load_its_information. = dan wordt de huidige configuratie ingelezen.
 Enter_a_new_signal_head_number_or = Kies allereerst een bestaand Seinschild
 Single_signal_head_on_single = Enkel Seinschild op enkelspoor naar dubbelspoor.
@@ -59,7 +59,7 @@ InUseApproachSensor = Naderingsterugmelder
 InUseBlockBossFooter = Wordt verwijderd uit deze SSL
 Restricting_Speed = Langzame snelheid
 ApplyToolTip = Klik om de logica voor dit Seinschild aan te maken/bij te werken.
-ApplyErrorDialog = Fout bij het aanmaken van SSL.\nBekijk details in de Systeemconsole.
+ApplyErrorDialog = Fout bij het aanmaken van SSL.\nVoor details zie de Systeemconsole.
 CommentToolTip = Notitie wordt opgeslagen met deze SSL
 StatusSslStart = Begin door bovenaan een Seinschild te kiezen uit de lijst
 StatusSslCreated = SSL voor Seinschild {0} aangemaakt
