--- a/java/src/jmri/jmrit/blockboss/BlockBossBundle_de.properties
+++ b/java/src/jmri/jmrit/blockboss/BlockBossBundle_de.properties
@@ -45,7 +45,7 @@ Sensor_active_sets_this_signal_to_Red. = Detektor Aktiv stellt Schirm auf Rot.
 Enter_sensor_that_lights_this_signal_or = Eine Detektor ausw\u00e4hlen (oder neuen Namen eingeben) welche dieses Schirm einblendet,<br>oder leer lassen f\u00fcr Immer An.
 then_hit_return_to_load_its_information. = heutige Konfiguration wird eingelesen.
 Enter_a_new_signal_head_number_or = Bestehenden Signalschirm ausw\u00e4hlen. Eventuelle
-Single_signal_head_on_single = Einziges Signalschirm auf Enkelgleis in Richtung Doppelgleis.
+Single_signal_head_on_single = Einziges Signalschirm auf die eingleisige Seite der Weiche.
 Signal_head_for_branching_track = Signalschirm auf Abzweig
 through_turnout_in_either_direction = durch Weiche in jede Richtung.
 Signal_head_for_main_track = Signalschirm auf Hauptgleis
