--- a/java/src/jmri/jmrit/entryexit/EntryExitBundle_ca.properties
+++ b/java/src/jmri/jmrit/entryexit/EntryExitBundle_ca.properties
@@ -8,15 +8,15 @@ MenuItemCancelRoute = Cancel\u00b7la Itinerari
 MenuItemLockManualRoute = Bloqueja Itinerari Manual
 
 BeanNameDestination = Punt de destinaci\u00f3 NX
-#+ StackRouteAsk = Would you like to Stack the Route?
-#+ RouteNotClear = Route Not Clear
-#+ Error1 = No item was selected in the list.\nPlease do so and click {0} or leave Route Stacked.
+StackRouteAsk = Would you like to Stack the Route?
+RouteNotClear = Route Not Clear
+Error1 = No item was selected in the list.\nPlease do so and click {0} or leave Route Stacked.
 
-#+ Stack = Stack
-#+ ClearDown = Clear Down
-#+ Exit = Exit
-#+ InterlockPrompt = What would you like to do with this interlock?
-#+ Interlock = Interlock
+Stack = Stack
+ClearDown = Clear Down
+Exit = Exit
+InterlockPrompt = What would you like to do with this interlock?
+Interlock = Interlock
 
 # Merged properties for the jmri.jmrit.signalling package
 
@@ -32,7 +32,7 @@ SignallingPairs = Parells de senyalitzaci\u00f3
 
 UpdateLogicButton = Actualitza la l\u00f2gica de senyals
 UpdateButtonToolTip = Canvia la l\u00f2gica d'aquest M\u00e0stil de Senyals i surt del mode d'edici\u00f3
-#+ ApplyButtonToolTip = Change this Signal Mast Logic and leave Edit mode
+ApplyButtonToolTip = Change this Signal Mast Logic and leave Edit mode
 AddLogic = Afegeix l\u00f2gica de senyals
 UseLayoutEditorPaths = Usa els detalls d'itineraris de l'editor de maquetes
 UseTurnoutDetails = Usa detalls de desviament de l'editor de maquetes
@@ -40,7 +40,7 @@ UseBlockDetails = Usa detalls de bloc de l'editor de maquetes
 AllowAutomaticSignalMast = Permet que la l\u00f2gica gestioni senyals conflictius
 LockTurnouts = Bloqueja agulles quan la l\u00f2gica de senyals \u00e9s activa
 PathSpeed = Velocitat de l'itinerari
-#+ NoneSet = None Set
+NoneSet = None Set
 
 ErrorUnReachableDestination = El pal de senyals de destinaci\u00f3 no es pot trobar des del pal de senyals d'origen
 WarningUnabletoValidate = No ha estat possible validar el cam\u00ed entre els dos pals de senyals
@@ -50,12 +50,12 @@ LayoutBlockRoutingEnabled = Blocs d'itinerari activats a la maqueta.\n Siusplau,
 LayoutBlockRoutingEnabledShort = Blocs d'itinerari activats a la maqueta.
 SignalMastCriteriaOwn = L'estat del senyal ha de ser "{0}" aquesta l\u00f2gica \u00e9s aplicable tant a l'origen, com a la destinaci\u00f3.\nAix\u00f2 pot comportar que la l\u00f2gica no treballi correctament.\nEst\u00e0s segur que ho vols usar?
 SignalMastCriteriaOwnTitle = Error en el pal de senyals
-#+ ErrorSignalMastIdentical = Destination Signal Mast should differ from Source Mast.\nSelect and configure a different Destination Mast.
-#+ WarningExistingPair = The Destination Mast was already defined with this Source Mast.\nDo you want to overwrite its former definition?
-#+ DiscoverMastsTitle = Discover Signal Mast Pairs
-#+ DiscoveringMasts = Discovering Signal Masts
-#+ GenComplete = Generation of Signalling Pairs Completed
-#+ GenSkipped = Cannot search for Pairs as there are\nno Layout Editor panels available.
+ErrorSignalMastIdentical = Destination Signal Mast should differ from Source Mast.\nSelect and configure a different Destination Mast.
+WarningExistingPair = The Destination Mast was already defined with this Source Mast.\nDo you want to overwrite its former definition?
+DiscoverMastsTitle = Discover Signal Mast Pairs
+DiscoveringMasts = Discovering Signal Masts
+GenComplete = Generation of Signalling Pairs Completed
+GenSkipped = Cannot search for Pairs as there are\nno Layout Editor panels available.
 
 UnOccupied = Lliure
 Occupied = Ocupat
@@ -77,7 +77,7 @@ SelectPanel = Selecciona Panell
 FromLocation = Punt d'entrada
 ToLocation = Punt de sortida
 AddPair = Afegir parell
-#+ AddEntryExitPoints = Add Entry Exit Points
+AddEntryExitPoints = Add Entry Exit Points
 AutoGenerate = Auto-generaci\u00f3 Parelles d'Entrada-Sortida
 AutoGenEntryExitTitle = Auto-generaci\u00f3 Parelles d'Entrada-Sortida
 AutoGenEntryExitMessage = Vols generar autom\u00e0ticament \nEls parells d'entrada sortida i la l\u00f2gica, basada \nen el pla de vies de la maqueta?
@@ -87,20 +87,20 @@ ValueBeNumber = La durada de la configuraci\u00f3 del color ha de ser un nombre!
 RouteSetColour = Color inicial de la ruta durant un itinerari V\u00e0lid
 OptionsTitle = Opcions d'Entrada Sortida
 Reselection = Opcions de selecci\u00f3 d'Itinerari
-#+ ReselectionTip = Set the action for when the NX buttons are reselected
+ReselectionTip = Set the action for when the NX buttons are reselected
 
 EndBumperPoint = Ubicaci\u00f3 de destinaci\u00f3 es troba en una topera, no \u00e9s possible fer els "dos sentits" de la marxa
 
-#+ SetTurnoutsOnly = Set Turnouts Only
-#+ SetTurnoutsAndSignalMasts = Set Turnouts and Signal Masts
-#+ FullInterlock = Full Interlock
-#+ NXType = NX Type
-#+ DiscoverEntryExitPairs = Discover Entry Exit Pairs
-#+ DiscoveringEntryExitPairs = Discovering Entry Exit Pairs...
-#+ AutoGenComplete = Generation of Entry Exit Pairs Completed
+SetTurnoutsOnly = Set Turnouts Only
+SetTurnoutsAndSignalMasts = Set Turnouts and Signal Masts
+FullInterlock = Full Interlock
+NXType = NX Type
+DiscoverEntryExitPairs = Discover Entry Exit Pairs
+DiscoveringEntryExitPairs = Discovering Entry Exit Pairs...
+AutoGenComplete = Generation of Entry Exit Pairs Completed
 
-#+ LabelSelectChecked = <html>Select {0}<br>to be checked:</html>
-#+ LabelAutogenerated=<html>These {0} are<br>auto generated<br>and can't be<br>changed:</html>
+LabelSelectChecked = <html>Select {0}<br>to be checked:</html>
+LabelAutogenerated=<html>These {0} are<br>auto generated<br>and can't be<br>changed:</html>
 SourceMast = M\u00e0stil de Senyals d'origen
 DestMast = M\u00e0stil de Senyals de dest\u00ed
 BothWayTurnoutOnly = No es poden usar dues direccions si hi ha un Senyal a l'entrada i a la sortida
@@ -110,10 +110,10 @@ ColumnTo = Sortida
 ColumnBoth = Ambdues direccions
 DispatcherInt = Integra amb Dispatcher
 
-#+ PromptUser = Prompt User
-#+ ClearRoute = Clear Route
-#+ CancelRoute = Cancel Route
-#+ StackRoute = Stack Route
+PromptUser = Prompt User
+ClearRoute = Clear Route
+CancelRoute = Cancel Route
+StackRoute = Stack Route
 
 # colors use jmrit.Bundle
 
