--- a/java/src/jmri/jmrit/entryexit/EntryExitBundle_it.properties
+++ b/java/src/jmri/jmrit/entryexit/EntryExitBundle_it.properties
@@ -5,16 +5,16 @@ MenuItemClearRoute = Pulisci Itinerario
 MenuItemCancelRoute = Annulla Itinerario
 MenuItemLockManualRoute = Blocca itinerario manuale
 
-#+ BeanNameDestination = NX Destination Point
-#+ StackRouteAsk = Would you like to Stack the Route?
-#+ RouteNotClear = Route Not Clear
-#+ Error1 = No item was selected in the list.\nPlease do so and click {0} or leave Route Stacked.
+BeanNameDestination = NX Destination Point
+StackRouteAsk = Would you like to Stack the Route?
+RouteNotClear = Route Not Clear
+Error1 = No item was selected in the list.\nPlease do so and click {0} or leave Route Stacked.
 
-#+ Stack = Stack
-#+ ClearDown = Clear Down
-#+ Exit = Exit
-#+ InterlockPrompt = What would you like to do with this interlock?
-#+ Interlock = Interlock
+Stack = Stack
+ClearDown = Clear Down
+Exit = Exit
+InterlockPrompt = What would you like to do with this interlock?
+Interlock = Interlock
 
 # Merged properties for the jmri.jmrit.signalling package
 
@@ -27,7 +27,7 @@ MenuItemLockManualRoute = Blocca itinerario manuale
 SignallingPairs = Coppie di Segnalazione
 UpdateLogicButton = Aggiorna Logica Segnale
 UpdateButtonToolTip = Cambia questo Percorso esci da Modifica
-#+ ApplyButtonToolTip = Change this Signal Mast Logic and leave Edit mode
+ApplyButtonToolTip = Change this Signal Mast Logic and leave Edit mode
 AddLogic = Aggiungi Logica Segnale
 UseLayoutEditorPaths = Usa Percorsi dall'Editor Tracciato
 UseTurnoutDetails = Usa dettagli Scambi dall'Editor Tracciato
@@ -35,7 +35,7 @@ UseBlockDetails = Usa dettagli Blocco dall'Editor Tracciato
 AllowAutomaticSignalMast = Permetti alla Logica di determinare automaticamente Conflitti tra segnali
 LockTurnouts = Blocca Scambi quando la logica del segnale \u00e8 attiva
 PathSpeed = Velocit\u00e0 Percorso
-#+ NoneSet = None Set
+NoneSet = None Set
 
 ErrorUnReachableDestination = Lo Stante del Segnale Destinazione non \u00e8 raggiungibile direttamente dal dal Segnale Sorgente
 WarningUnabletoValidate = Non \u00e8 stato possibile convalidare il percorso tra i due Segnali
@@ -45,12 +45,12 @@ LayoutBlockRoutingEnabled = Instradamento Blocchi sul tracciato  \u00e8 stato ab
 LayoutBlockRoutingEnabledShort = Instradamento Blocchi sul tracciato \u00e8 stato abilitato.
 SignalMastCriteriaOwn = Lo stato del segnale deve essere "{0}", questa logica \u00e8 sia Sorgente che Destinazione.\nQuesto pu\u00f2 avere come risultato una logica che non funziona correttamente.nSei sicuro di volerla usare lo stesso?
 SignalMastCriteriaOwnTitle = Errore Segnale
-#+ ErrorSignalMastIdentical = Destination Signal Mast should differ from Source Mast.\nSelect and configure a different Destination Mast.
-#+ WarningExistingPair = The Destination Mast was already defined with this Source Mast.\nDo you want to overwrite its former definition?
-#+ DiscoverMastsTitle = Discover Signal Mast Pairs
-#+ DiscoveringMasts = Discovering Signal Masts
-#+ GenComplete = Generation of Signalling Pairs Completed
-#+ GenSkipped = Cannot search for Pairs as there are\nno Layout Editor panels available.
+ErrorSignalMastIdentical = Destination Signal Mast should differ from Source Mast.\nSelect and configure a different Destination Mast.
+WarningExistingPair = The Destination Mast was already defined with this Source Mast.\nDo you want to overwrite its former definition?
+DiscoverMastsTitle = Discover Signal Mast Pairs
+DiscoveringMasts = Discovering Signal Masts
+GenComplete = Generation of Signalling Pairs Completed
+GenSkipped = Cannot search for Pairs as there are\nno Layout Editor panels available.
 
 UnOccupied = Libero
 Occupied = Occupato
@@ -72,7 +72,7 @@ SelectPanel = Seleziona Pannello
 FromLocation = Punto di Entrata
 ToLocation = Punto di Uscita
 AddPair = Aggiungi Coppia
-#+ AddEntryExitPoints = Add Entry Exit Points
+AddEntryExitPoints = Add Entry Exit Points
 AutoGenerate = Autogenerazione Coppie Entrata-Uscita
 AutoGenEntryExitTitle = Autogenerazione Coppie Entrata-Uscita
 AutoGenEntryExitMessage = Desideri generare automaticamente  \nle coppie di Entrata-Uscita e la Logica, basandosi \nsul tracciato eseguito nell'Editor Tracciati?
@@ -82,20 +82,20 @@ ValueBeNumber = Durata settaggio Colore deve essere un numero!
 RouteSetColour = Colore iniziale del percorso durante Itinerario Valido
 OptionsTitle = Opzioni Ingresso-uscita
 Reselection = Opzioni Riselezione percorso
-#+ ReselectionTip = Set the action for when the NX buttons are reselected
+ReselectionTip = Set the action for when the NX buttons are reselected
 
 EndBumperPoint = La posizione Destinazione \u00cb un Respingente, non \u00cb possibile il percorso nei "due senso di marcia NX"
 
-#+ SetTurnoutsOnly = Set Turnouts Only
-#+ SetTurnoutsAndSignalMasts = Set Turnouts and Signal Masts
-#+ FullInterlock = Full Interlock
-#+ NXType = NX Type
-#+ DiscoverEntryExitPairs = Discover Entry Exit Pairs
-#+ DiscoveringEntryExitPairs = Discovering Entry Exit Pairs...
-#+ AutoGenComplete = Generation of Entry Exit Pairs Completed
+SetTurnoutsOnly = Set Turnouts Only
+SetTurnoutsAndSignalMasts = Set Turnouts and Signal Masts
+FullInterlock = Full Interlock
+NXType = NX Type
+DiscoverEntryExitPairs = Discover Entry Exit Pairs
+DiscoveringEntryExitPairs = Discovering Entry Exit Pairs...
+AutoGenComplete = Generation of Entry Exit Pairs Completed
 
-#+ LabelSelectChecked = <html>Select {0}<br>to be checked:</html>
-#+ LabelAutogenerated = <html>These {0} are<br>auto generated<br>and can't be<br>changed:</html>
+LabelSelectChecked = <html>Select {0}<br>to be checked:</html>
+LabelAutogenerated = <html>These {0} are<br>auto generated<br>and can't be<br>changed:</html>
 SourceMast = Stante Sorgente
 DestMast = Stante Destinazione
 BothWayTurnoutOnly = Percorso nei due sensi di marcia non utilizzabile se c'\u00e0 un Segnale sia all'Entrata che all'Uscita
@@ -105,10 +105,10 @@ ColumnTo = Uscita
 ColumnBoth = Entrambe le direzioni
 DispatcherInt = Integra con Dispatcher
 
-#+ PromptUser = Prompt User
-#+ ClearRoute = Clear Route
-#+ CancelRoute = Cancel Route
-#+ StackRoute = Stack Route
+PromptUser = Prompt User
+ClearRoute = Clear Route
+CancelRoute = Cancel Route
+StackRoute = Stack Route
 
 # colors use jmrit.Bundle
 
