Replace Set bg color radio buttons by combo in CP/palette/catalog search for icons, add same to CPE icon preview Add checkeredPane util, add to combo, move.add bundle keys

--- a/java/src/jmri/jmrit/Bundle_nl.properties
+++ b/java/src/jmri/jmrit/Bundle_nl.properties
@@ -159,6 +159,10 @@ ClearAll        = Deselecteer alle
 MultiSensor     = MultiSensor
 IndicatorTrack  = Indicatiespoor
 IndicatorTO     = Indicatiewissel
+setBackground   = Achtergrond:
+Checkers        = Ruitjes
+PanelBgColor    = Als Paneel
+
 #used in dualdecoder
 IDnumber        = ID nummer {0}
 Legacy          = Oude versie
