working set bg colors, not checkered

--- a/java/src/jmri/jmrit/display/palette/PaletteBundle_de.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle_de.properties
@@ -28,8 +28,7 @@ fromArrow=Eintrittpfeil
 
 OccupancySensor=Besetztmelderkreis
 ErrorSensor=Fehlerdetektor
-
-IconSetName=Sinnbilderpaketname:
+IconSetName=Sinnbilderpaketname: {0}
 #IconName=Sinnbildname:
 #editText=Bearbeite Text:
 LinkName=Name des Gleisstellbildes oder URL
