--- a/java/src/jmri/jmrit/display/palette/PaletteBundle_nl.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle_nl.properties
@@ -27,8 +27,7 @@ fromArrow           = Inrijpijl
 
 OccupancySensor     = Spoorstroomloop
 ErrorSensor         = Foutterugmelder   
-
-IconSetName         = Naam Symbolenset:
+IconSetName=Naam Symbolenset: {0}
 #IconName            = Icon Name:
 #editText            = Edit Text
 LinkName            = Paneel of URL
