--- a/java/src/jmri/jmrit/display/palette/PaletteBundle_da.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle_da.properties
@@ -28,8 +28,7 @@ fromArrow       = Entry Arrow
 
 OccupancySensor = Occupancy Circuit
 ErrorSensor     = Fejl Sensor   
-
-IconSetName     = Ikon S\u00e6t Navn:
+IconSetName=Ikon S\u00e6t Navn: {0}
 #IconName        = Ikon Navn:
 #editText        = Rediger Text
 LinkName        = Panel ellr URL Navn
