--- a/java/src/jmri/jmrit/display/palette/PaletteBundle_fr.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle_fr.properties
@@ -34,8 +34,7 @@ fromArrow   = Fl\u00eache d'Entr\u00e9e
 
 OccupancySensor = Circuit d'occupation
 ErrorSensor = Erreur Capteur
-
-IconSetName = D\u00e9finir Nom de l'Ic\u00f4ne:
+IconSetName=D\u00e9finir Nom de l'Ic\u00f4ne: {0}
 #IconName = Nom Ic\u00f4ne :
 #editText = Modifier le Texte
 LinkName = Panneau ou le Nom de l'URL
