fix Bundle inheritance, including moving some keys to a higher level in the tree.

--- a/java/src/jmri/NamedBeanBundle_de.properties
+++ b/java/src/jmri/NamedBeanBundle_de.properties
@@ -269,3 +269,7 @@ ButtonStart     = Start
 RosterTitle     = Lokpark
 Automatic       = Automatik
 Manual          = Manuell
+
+
+# Keys used in both jmri.jmrix and jmri.jmrit
+SendPacketTitle         = Sende Paket
