--- a/java/src/jmri/NamedBeanBundle_nl.properties
+++ b/java/src/jmri/NamedBeanBundle_nl.properties
@@ -299,3 +299,7 @@ Automatic               = Automatisch
 rsType                  = Locomotief
 FunctionMomentary       = Momentaan
 FunctionContinuous      = Permanent
+
+
+# Keys used in both jmri.jmrix and jmri.jmrit
+SendPacketTitle         = Verstuur Packet
