--- a/java/src/jmri/jmrit/Bundle_nl.properties
+++ b/java/src/jmri/jmrit/Bundle_nl.properties
@@ -61,6 +61,7 @@ MenuItemSetupClock = Stel modelklok in...
 MenuItemAnalogClock = Analoge Klok
 ButtonRunClock = Loop
 ButtonPauseClock = Pauseer
+ButtonGo = Start
 
 MenuItemAmpMeter = Spoorstroom...
 
