translation cs PanelPro part 2017-11-26

--- a/java/src/jmri/jmrit/beantable/BeanTableBundle_cs.properties
+++ b/java/src/jmri/jmrit/beantable/BeanTableBundle_cs.properties
@@ -10,7 +10,7 @@ TitleSignalTable = Tabulak n\u00e1v\u011bstn\u00edch desek
 TitleLightTable = Tabulka osv\u011btlen\u00ed
 TitleLogixTable = Tabulka Logix
 TitleTransitTable = Tabulka tranzit
-TitleOBlockTable = Tabulka kolejov\u00fdch obvod\u016f
+TitleOBlockTable = Tabulka blok\u016f obsazen\u00ed
 TitleSectionTable = Tabulka odd\u00edly
 TitleReporterTable = Tabulka Reporter
 TitleMemoryTable = Tabulka pam\u011bti
@@ -471,7 +471,7 @@ AspectMatrixHeaderLabel = Pro ka\u017edou povolenou n\u00e1v\u011bst za\u0161krt
 AspectMatrixHeaderTooltip = Pol\u00ed\u010dko za\u0161krtnuto = Pro = rovn\u011b; od\u0161krtnuto = Proti = do odbo\u010dky
 MatrixOutputEmpty = Aspo\u0148 jeden z v\u00fdstup\u016f nebyl definov\u00e1n.\nPros\u00edm nastavte nejd\u0159\u00edve v\u0161echny vstupy pro toto n\u00e1v\u011bstidlo.
 MatrixUnLitDetails = V\u00fdstup pro neosv\u011btleno
-MatrixUnlitTooltip = Kdy\u017e aktivn\u00ed, nastavte shodn\u011b n\u00e1v\u011bst n\u00ed\u017ee na zhasnuto/neosv\u011btleno 
+MatrixUnlitTooltip = Kdy\u017e aktivn\u00ed, nastavte shodn\u011b n\u00e1v\u011bst n\u00ed\u017ee uvedenou na zhasnuto/neosv\u011btleno 
 MatrixMastCopyAspectBits = Kop\u00edrovat matici n\u00e1v\u011bst\u00ed z n\u00e1v\u011bstidla
 MatrixColWarning = Zvolen\u00fd p\u016fvodn\u00ed m\u00e1 {0} m\u00edsto {1} sloupc\u016f.\nPokra\u010dovat?
 MatrixColWarningTitle = Po\u010det sloupc\u016f nesouhlas\u00ed
