--- a/java/src/jmri/NamedBeanBundle_cs.properties
+++ b/java/src/jmri/NamedBeanBundle_cs.properties
@@ -31,7 +31,7 @@ BeanNameSignalMastLogic = Logika n\u00e1v\u011bstidel
 BeanNameSignalAppMap = Zobrazen\u00ed vzhledu n\u00e1v\u011bstidel
 BeanNameSignalGroup  = N\u00e1v\u011bstn\u00ed skupina
 BeanNameWarrant      = Povolen\u00ed
-BeanNameOBlock       = Kolejov\u00fd obvod
+BeanNameOBlock       = Blok obsazen\u00ed
 BeanNamePortal       = Port\u00e1l
 # not a real bean but form for LogixTableAction
 EntryExit            = Vjezd odjezd
