--- a/java/src/jmri/jmrit/Bundle_cs.properties
+++ b/java/src/jmri/jmrit/Bundle_cs.properties
@@ -23,7 +23,7 @@ MenuItemSimpleSignal = Jednoduch\u00e1 n\u00e1v\u011bstn\u00ed logika
 MenuItemRouteTable = Cesty
 MenuItemLRouteTable = LRoutes
 MenuItemLogixTable = Logix
-MenuItemOBlockTable = Kolejov\u00e9 obvody
+MenuItemOBlockTable = Bloky obsazen\u00ed
 MenuItemBlockTable = Kolejov\u00e9 \u00faseky
 MenuItemSectionTable = Odd\u00edly
 MenuItemTransitTable = Tranzity
