--- a/java/src/jmri/jmrit/display/DisplayBundle_cs.properties
+++ b/java/src/jmri/jmrit/display/DisplayBundle_cs.properties
@@ -213,7 +213,7 @@ BadIcon         = Obr\u00e1zek nenalezen
 IconUrlError    = Soubor obr\u00e1zku pro {0} nenalezen
 UrlErrorPrompt1 = Pro tuto polo\u017eku v panelu se nezobraz\u00ed \u017e\u00e1dn\u00fd obr\u00e1zek.
 UrlErrorPrompt1A= Zadejte spr\u00e1vn\u00fd n\u00e1zev souboru v textov\u00e9m pol\u00ed\u010dku nebo 
-UrlErrorPrompt1B= p\u0159et\u00e1hn\u011bte obr\u00e1zek z adres\u00e1\u0159e n\u00ed\u017ee do textov\u00e9ho pol\u00ed\u010dka.
+UrlErrorPrompt1B= p\u0159et\u00e1hn\u011bte obr\u00e1zek z adres\u00e1\u0159e n\u00ed\u017ee uveden\u00e9ho do textov\u00e9ho pol\u00ed\u010dka.
 UrlErrorPrompt2 = Stiskn\u011bte [{0}] pro pou\u017eit\u00ed jm\u00e9na souboru v textov\u00e9m pol\u00ed\u010dku pro obr\u00e1zek.
 UrlErrorPrompt3 = Stiskn\u011bte [{0}] pro vyjmut\u00ed obr\u00e1zku kdy\u017e je panel ulo\u017een.
 UrlErrorPrompt3A= Ulo\u017een\u00ed panelu ud\u011bl\u00e1 zm\u011bny trval\u00e9.  
@@ -402,8 +402,8 @@ SignalMastIconLoadError2 = Nemohu nahr\u00e1t obr\u00e1zek {0}\n  {1} \npro n\u0
 SignalMastIconLoadErrorTitle = Chyba obr\u00e1zku
 SignalMastLogic = Logika n\u00e1v\u011bstidel
 
-DragOccupancyName = P\u0159et\u00e1hn\u011bte n\u00e1zev za\u0159\u00edzen\u00ed (kolejov\u00fd obvod nebo sn\u00edma\u010d) do {0} pole.
-DragErrorName = P\u0159et\u00e1hn\u011bte n\u00e1zev sn\u00edma\u010de pro zobrazen\u00ed chybov\u00e9 podm\u00ednky na "{0}" pole.
+DragOccupancyName = P\u0159et\u00e1hn\u011bte n\u00e1zev za\u0159\u00edzen\u00ed (blok obsazen\u00ed nebo sn\u00edma\u010d) do pole {0}.
+DragErrorName = P\u0159et\u00e1hn\u011bte n\u00e1zev sn\u00edma\u010de pro zobrazen\u00ed chybov\u00e9 podm\u00ednky do pole {0}.
 ClosePicklist = Uzav\u0159\u00edt v\u00fdb\u011brov\u00fd seznam
 noRowSelected   = Vyberte \u0159\u00e1dek v tabulce ktar\u00fd poskytuje za\u0159\u00edzen\u00ed pro tento obr\u00e1zek.
 
@@ -462,7 +462,7 @@ Line=P\u0159\u00edmka
 Circle=Kru\u017enice
 Ellipse=Elipsa
 Bezier=Bezier
-SwitchboardDefaultName=\u0158adi\u010d {0}
+SwitchboardDefaultName=\u0158adi\u010de v\u00fdhybek {0} 
 MenuPanelsMnemonic=P
 MenuEditMnemonic=E
 MenuFileMnemonic=F
@@ -475,7 +475,7 @@ EditTitleMessageTitle=Upravit n\u00e1zev \u0159adi\u010de
 CheckBoxHideUnconnected=Aktualizovat nep\u0159ipojen\u00e9 p\u0159ep\u00edna\u010de
 Buttons=Tla\u010d\u00edtko
 Sliders=Posuvn\u00edk
-Keys=Kl\u00e1vesa
+Keys=P\u0159ep\u00edna\u010d
 Symbols=Symbol
 SelectRangeTitle=Vyberte rozsah adres pro zobrazen\u00ed
 ButtonUpdate=Aktualizovat \u0159adi\u010d
