apply bg choice on visible (Image)Panel pick up/set Panel bg color, check for null override special classes use shared methods and fields for bg combo adjust preview image pixels size, set as integers not JPanel as not yet laid out and difficult to configure use more variables in debug lines

--- a/java/src/jmri/jmrit/Bundle_nl.properties
+++ b/java/src/jmri/jmrit/Bundle_nl.properties
@@ -159,7 +159,7 @@ ClearAll        = Deselecteer alle
 MultiSensor     = MultiSensor
 IndicatorTrack  = Indicatiespoor
 IndicatorTO     = Indicatiewissel
-setBackground   = Achtergrond:
+setBackground   = Toon op:
 Checkers        = Ruitjes
 PanelBgColor    = Als Paneel
 
