common method to build Palette background image array, remove unused imports Set Background... button name

--- a/java/src/jmri/jmrit/display/palette/PaletteBundle_da.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle_da.properties
@@ -41,7 +41,7 @@ HideIcons       = Skjul Ikoner
 ButtonEditIcons = Rediger Ikoner
 ButtonShowCatalog = Ikon Katalog
 HideCatalog     = Skjul Katalog
-ButtonBackgroundColor = Baggrunds Farve
+ButtonBackgroundColor=Baggrunds Farve...
 updateButton    = Opdater Panel
 addNewFamily    = Tilf\u00f8j Nyt Ikon S\u00e6t
 addIcon         = Tilf\u00f8j Ikon
