--- a/java/src/jmri/jmrit/display/palette/PaletteBundle_fr.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle_fr.properties
@@ -47,7 +47,7 @@ HideIcons = Masquer les Ic\u00f4nes
 ButtonEditIcons = \u00c9diter des Ic\u00f4nes
 ButtonShowCatalog = Catalogue d'Ic\u00f4nes 
 HideCatalog = Cacher Catalogue
-ButtonBackgroundColor = Couleur de fond
+ButtonBackgroundColor=Couleur de fond...
 updateButton = M \u00e0 J Panneau
 addNewFamily = Ajouter un nouveau jeu d'Ic\u00f4ne
 addIcon = Ajouter Ic\u00f4ne
