--- a/java/src/jmri/jmrit/display/palette/PaletteBundle_nl.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle_nl.properties
@@ -40,7 +40,7 @@ HideIcons           = Verberg Symbolen
 ButtonEditIcons     = Bewerk Symbolen
 ButtonShowCatalog   = Symbolencatalogus
 HideCatalog         = Verberg Catalogus
-ButtonBackgroundColor = Achtergrondkleur
+ButtonBackgroundColor=Kies Achtergrondkleur...
 updateButton        = Werk Paneel bij
 addNewFamily        = Voeg nieuwe Symbolenset toe
 addIcon             = Voeg Symbool toe
