--- a/java/src/jmri/jmrit/display/palette/PaletteBundle_de.properties
+++ b/java/src/jmri/jmrit/display/palette/PaletteBundle_de.properties
@@ -42,7 +42,7 @@ HideIcons=Verbirge Sinnbilder
 ButtonEditIcons=Sinnbilder bearbeiten
 ButtonShowCatalog=Sinnbilderkatalog
 HideCatalog=Verbirge Katalog
-ButtonBackgroundColor=Hintergrundfarbe
+ButtonBackgroundColor=W\u00e4hle Hintergrundfarbe...
 updateButton=Tafel aktualisieren
 addNewFamily=F\u00fcge neues Paket hinzu
 addIcon=F\u00fcge Sinnbild hinzu
